--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="section_box">
           <!--Background video-->
           <video id="myVideo" muted>
-            <source src="assets/videos/Artist.mp4" type="video/mp4" />
+            <source src="Home/assets/videos/Artist.mp4" type="video/mp4" />
           </video>
           <div class="home">
             <button id="button" type="button" onclick="skipVideo()">
@@ -45,13 +45,13 @@
                   <div class="artwork">
                     <video id="myVideo02" muted loop>
                       <source
-                        src="assets/videos/Artist02.mp4"
+                        src="Home/assets/videos/Artist02.mp4"
                         type="video/mp4"
                       />
                     </video>
                     <div class="profile">
                       <button id="button02" type="button">
-                        <a href="../Login/index.html">Explore</a>
+                        <a href="Login/index.html">Explore</a>
                       </button>
                     </div>
                   </div>
@@ -60,13 +60,13 @@
             </div>
             <img
               class="responsive_image"
-              src="assets/images/Background.svg"
+              src="Home/assets/images/Background.svg"
               alt="Grainy Background"
             />
           </div>
         </div>
       </div>
     </main>
-    <script src="assets/javascripts/script.js"></script>
+    <script src="Home/assets/javascripts/script.js"></script>
   </body>
 </html>
