--- a/Profile/index.html
+++ b/Profile/index.html
@@ -17,7 +17,7 @@
               <a href="#">Trending</a>
             </li>
           </ul>
-          <a href="../Home/index.html">Avoir</a>
+          <a href="../index.html">Avoir</a>
           <ul>
             <li>
               <a href="#">Contacts</a>
